// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (external/internal deps, flags) 1`] = `
Array [
  Array [
    "yarn add mady jest-html --dev",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
    },
  ],
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
      "errorLogLevel": "trace",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (external/internal deps, flags) 2`] = `
Object {
  "dependencies": Object {
    "oao": "*",
    "timm": "1.x",
  },
  "devDependencies": Object {
    "oao-b": "^0.1.16",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-c",
  "version": "0.1.0",
}
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (flags) 1`] = `
Array [
  Array [
    "yarn add mady jest-html --dev --exact",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (internal deps, flags) 1`] = `
Array [
  Array [
    "yarn link oao-b",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
      "errorLogLevel": "trace",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (internal deps, flags) 2`] = `
Object {
  "dependencies": Object {
    "oao": "*",
    "timm": "1.x",
  },
  "devDependencies": Object {
    "oao-b": "^0.1.16",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-c",
  "version": "0.1.0",
}
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (multiple packages, no flags) 1`] = `
Array [
  Array [
    "yarn add mady jest-html",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly (one package, no flags) 1`] = `
Array [
  Array [
    "yarn add mady",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes ADD correctly with workspaces (one package, flags) 1`] = `
Array [
  Array [
    "yarn add mady --dev",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes REMOVE correctly (external/internal deps) 1`] = `
Array [
  Array [
    "yarn remove timm",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
    },
  ],
  Array [
    "yarn unlink oao",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
      "errorLogLevel": "trace",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes REMOVE correctly (internal deps) 1`] = `
Array [
  Array [
    "yarn unlink oao",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
      "errorLogLevel": "trace",
      "logLevel": "trace",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes REMOVE correctly 1`] = `
Array [
  Array [
    "yarn remove mady",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes REMOVE correctly with workspaces (one package, no flags) 1`] = `
Array [
  Array [
    "yarn remove mady",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly (external/internal deps, no flags) 1`] = `
Array [
  Array [
    "yarn upgrade timm",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly (external/internal deps, no flags) 2`] = `
Object {
  "dependencies": Object {
    "oao": "2.0.0",
    "timm": "1.x",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-c",
  "version": "0.1.0",
}
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly (no package, no flags) 1`] = `
Array [
  Array [
    "yarn upgrade",
    Object {
      "cwd": "test/fixtures/packages2/oao-c",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly (no package, no flags) 2`] = `
Object {
  "dependencies": Object {
    "oao": "^0.1.0",
    "timm": "1.x",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-c",
  "version": "0.1.0",
}
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly (one package, flags) 1`] = `
Array [
  Array [
    "yarn upgrade mady --ignore-engines",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly (one package, no flags) 1`] = `
Array [
  Array [
    "yarn upgrade mady",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands executes UPGRADE correctly with workspaces (one package, no flags) 1`] = `
Array [
  Array [
    "yarn upgrade mady",
    Object {
      "cwd": "test/fixtures/packages2/oao-b",
    },
  ],
]
`;

exports[`ADD/REMOVE/UPGRADE commands touches only the correct package.json 1`] = `
Object {
  "dependencies": Object {
    "timm": "1.x",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-b",
  "version": "0.1.16",
}
`;

exports[`ADD/REMOVE/UPGRADE commands touches only the correct package.json 2`] = `
Object {
  "dependencies": Object {
    "oao": "*",
    "timm": "1.x",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-b",
  "version": "0.1.16",
}
`;

exports[`ADD/REMOVE/UPGRADE commands touches only the correct package.json, with custom links 1`] = `
Object {
  "dependencies": Object {
    "timm": "1.x",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-b",
  "version": "0.1.0",
}
`;

exports[`ADD/REMOVE/UPGRADE commands touches only the correct package.json, with custom links 2`] = `
Object {
  "dependencies": Object {
    "ext-one": "*",
    "oao": "*",
    "timm": "1.x",
  },
  "license": "MIT",
  "main": "index.js",
  "name": "oao-b",
  "version": "0.1.0",
}
`;
